AC_PREREQ([2.69])
AC_INIT([rpkcs11], [0.1-dev], [http://github.org/halderen/rpkcs11/])
AC_CANONICAL_TARGET
AC_CONFIG_MACRO_DIR([m4])
AC_USE_SYSTEM_EXTENSIONS
AM_INIT_AUTOMAKE
LT_INIT
ACX_PREFIXHACK
dnl AC_CONFIG_SRCDIR([server.c])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PROG_CC_C_O
ACX_PEDANTIC
ACX_STRICT
dnl CHECK_COMPILER_FLAG(std=c99, [C99FLAG="-std=c99"])
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])
AC_CHECK_FUNCS([strrchr])
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_TYPE_UINT16_T
AX_C___ATTRIBUTE__

AX_PTHREAD
AC_CHECK_LIB(pthread, pthread_barrier_wait, [AC_DEFINE([HAVE_PTHREAD_BARRIER], [1], [Define if pthread barrier supported])])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
